outputs/main/eoh-qd_tsp_aco_2025-06-09_13-35-43/evaluations/problem_eval1919801316008200021_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/tsp_aco/eval.py", line 10, in <module>
    import gpt
  File "/home/dokhanhnam1199/QD/problems/tsp_aco/gpt.py", line 18
    cost += distance_matrix[-1], permutation[0]] if i == n - 2 else 0
                                               ^
SyntaxError: unmatched ']'
18
4
245.26873902505136
